# kick_chat_screen

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_instructions.md
src/: chatmessage.cpp  chatmessage.h  chatoverlay.cpp  chatoverlay.h  chatoverlay.ui  kickchatclient.cpp  kickchatclient.h  main.cpp
